DAPS-862 fix horizontal scrollbar on history page

--- a/src/qt/res/css/Light.css
+++ b/src/qt/res/css/Light.css
@@ -22,10 +22,10 @@ QAbstractSpinBox:disabled,
 QLineEdit:disabled,
 .QValidatedLineEdit:disabled,
 QComboBox:disabled,
-QSlider::handle:horizontal:disabled {
+/*QSlider::handle:horizontal:disabled {
   background: rgb(62, 78, 78);
   border: 1px solid rgb(51, 54, 54);
-}
+}*/
 
 #line_1, #line_2, #line_3, #line_4 {
   border-bottom: 1px solid gray;
@@ -280,35 +280,21 @@ QWidget::down-arrow:disabled {
 QWidget::left-arrow {
   image: url(":/images/leftArrow_small");
 }
-QWidget::left-arrow {
+QWidget::left-arrow:disabled {
   image: url(":/images/leftArrow_small_dark");
 }
 
 QWidget::right-arrow {
   image: url(":/images/rightArrow_small");
 }
-QWidget::right-arrow {
+QWidget::right-arrow:disabled {
   image: url(":/images/rightArrow_small_dark");
 }
 
 /*** Sliders ***/
-QWidget::horizontal {
+/*QWidget::horizontal {
   height: 45px;
-}
-
-QWidget::groove:horizontal {
-  height: 8px; /* the groove expands to the size of the slider by default. by giving it a height, it has a fixed size */
-  background-color: rgba(0, 0, 0, 0.4);
-  margin: 13px 0;
-  border-radius: 3px;
-}
-
-QWidget::handle:horizontal {
-  width: 31px;
-  margin: -13px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
-  border-radius: 15px;
-  background-color: #83faff;
-}
+}*/
 
 /*** Toggle Buttons ***/
 ToggleButton > QPushButton {
